--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "author": "Emerson Laranja",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {"dev":"ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"},
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "typeorm":"ts-node-dev node_modules/typeorm/cli.js"
+  },
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.31"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
